k8s/deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
spec:
  rules:
    - host: rust-xp.com
      http:
        paths:
          - path: /api/(feeds)(/|.*)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: news-service
                port:
                  number: 8001
          - path: /api/(news)(/|.*)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: news-service
                port:
                  number: 8001
          - path: /api/(users)(/|.*)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: users-service
                port:
                  number: 8000
          - path: /api/(auth)(/.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: users-service
                port:
                  number: 8000
          - path: /()(ws)
            pathType: ImplementationSpecific
            backend:
              service:
                name: users-service
                port:
                  number: 8000
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fe-service
                port:
                  number: 80
  ingressClassName: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users-container
          image: ffff/rust-users-prod
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: news-service
spec:
  selector:
    app: news
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news
  template:
    metadata:
      labels:
        app: news
    spec:
      containers:
        - name: news-container
          image: ffff/rust-news-prod
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: fe-service
spec:
  selector:
    app: fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe
  template:
    metadata:
      labels:
        app: fe
    spec:
      containers:
        - name: fe-container
          image: ffff/rust-fe-prod
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
